# fortnox-rs

./: Cargo.toml  README.md
examples/: smoke.rs
src/: id.rs  lib.rs
src/apis/: absence_transactions_resource_api.rs  account_charts_resource_api.rs  accounts_resource_api.rs  archive_resource_api.rs  article_file_connections_resource_api.rs  articles_resource_api.rs  articles_resource_articles_api.rs  asset_file_connection_resource_api.rs  asset_types_resource_api.rs  assets_resource_api.rs  attachment_resource_api.rs  attendance_transactions_resource_api.rs  company_information_resource_api.rs  company_settings_resource_api.rs  configuration.rs  contract_accruals_resource_api.rs  contract_templates_resource_api.rs  contracts_resource_api.rs  cost_centers_resource_api.rs  currencies_resource_api.rs  custom_document_type_resource_api.rs  custom_inbound_document_resource_api.rs  custom_outbound_document_resource_api.rs  customer_references_resource_api.rs  customers_resource_api.rs  employees_resource_api.rs  eu_vat_limit_regulation_resource_api.rs  expenses_resource_api.rs  finance_invoices_resource_api.rs  financial_years_resource_api.rs  inbox_resource_api.rs  incoming_goods_resource_api.rs  invoice_accruals_resource_api.rs  invoice_payments_resource_api.rs  invoices_resource_api.rs  labels_resource_api.rs  locked_period_resource_api.rs  me_resource_api.rs  mod.rs  modes_of_payments_resource_api.rs  (+33 more)
src/http/: mod.rs
src/models/: absence_transaction_list_item_wrap.rs  absence_transaction_payload_wrap.rs  absence_transaction_single_item_wrap.rs  account_chart_wrap.rs  (+227 more)
(+296 files in other folders)
