[package]
name = "fortnox"
version = "0.1.3+20250510"
authors = []
description = "The Fortnox API"
license = "CC0-1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
lexical = { version = "6.1.1", features = ["radix", "std", "integers", "parse", "format", "write-integers"] }
oauth2 = "4.4.1"
rust_decimal = "1.31.0"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_path_to_error = "0.1.14"
thiserror = "1.0.44"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.40"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "rustls", "rustls-tls", "gzip"]
